--- a/locale/zh-CN/zh-CN.cfg
+++ b/locale/zh-CN/zh-CN.cfg
@@ -1,7 +1,4 @@
-# This file is a part of MRNIU/factorio_LegendaryShipStart
-# (https://github.com/MRNIU/factorio_LegendaryShipStart).
-# 
-# zh-CN.cfg for MRNIU/factorio_LegendaryShipStart.
+# Copyright The MRNIU/factorio_LegendaryShipStart Contributors
 
 [mod-name]
 factorio_LegendaryShipStart=以传奇飞船开局
